Fix h1 font size and gap between appointment date and status
Jira ticket: CAMS-675

--- a/user-interface/src/trustees/forms/TrusteeAppointmentForm.scss
+++ b/user-interface/src/trustees/forms/TrusteeAppointmentForm.scss
@@ -1,3 +1,9 @@
+.trustee-detail-screen-heading {
+  h1 {
+    font-size: 2.5rem;
+  }
+}
+
 .trustee-form-screen {
   .usa-alert-container {
     margin-left: 0;
